# Manifold

./: .gitignore  README.md  pyproject.toml
manifold/foundry/: README.md
manifoldx/foundry/: README.md  torch_composer.py
vulcan/foundry/: README.md
