[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "manifoldx"
version = "0.0.1"
description = "No-code YAML-driven Domain-Specific Language (DSL) for building AI/ML model architectures and training pipelines."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{name="Sarang Galada", email="sarang.galada@gmail.com"}]
requires-python = ">=3.8"
classifiers = ["Programming Language :: Python :: 3"]