[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulcanpy"
version = "0.1.0"
description = "A YAML-driven DSL for composing and training AI/ML models without writing code."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name="Sarang Galada", email="sarang.galada@gmail.com"}]
requires-python = ">=3.8"

dependencies = [
  "torch>=2.0.0",
]

keywords = ["DSL", "machine-learning", "PyTorch", "YAML", "model-builder", "training"]

classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/saranggalada/Vulcan"
Documentation = "https://github.com/saranggalada/Vulcan#readme"
Source = "https://github.com/saranggalada/Vulcan"
Issues = "https://github.com/saranggalada/Vulcan/issues"

[tool.setuptools.packages.find]
where = ["."]